Fix Turbolinks error situations
This commit disconnects the mutation observer on `turbolinks:before-cache` and then clean up elements created by Alpine directives, unless marked as `data-turbolinks-permanent`.

The mutiation observer is reconnected at `turbolinks:load`.

This fixes two error situations when Alpine is combined with Turbolinks:

* Duplicate elements on navigation with the back or forward button.
* Errors/data races on Turbolinks navigation with Alpine components marked with `data-turbolinks-permanent`.

Fixes #319
Fixes #372

--- a/turbolinks-manual-test/index.html
+++ b/turbolinks-manual-test/index.html
@@ -5,12 +5,34 @@
     </head>
     <body>
         <h1>First Page</h1>
-        <a href="turbolinks-manual-test/navigated-away">Second Page</a>
+        <a href="/turbolinks-manual-test/navigated-away">Second Page</a>
 
+        <h2>This component should be preserved and be working in the Second page</h2>
         <div x-data="{ foo: 'bar' }" id="foo" data-turbolinks-permanent>
             <input x-model="foo"></input>
 
             <button x-on:click="foo = 'baz'"></button>
+        </div>
+
+        <h2>This item should not add a duplicate span item when navigating away and back to this page</h2>
+        <div x-data="{ foo: 'bar', open: true }">
+            <template x-if="open">
+                <span x-text="foo"></span>
+            </template>
+        </div>
+
+        <h2>This item should not add duplicate span items when navigating away and back to this page</h2>
+        <div x-data="{ foo: ['bar', 'baz'] }">
+            <template x-for="item in foo">
+                <span x-text="item"></span>
+            </template>
+        </div>
+
+        <h2>This component should be preserved and not be logging any errors when navigating to the Second page</h2>
+        <div x-data="{ foo: ['bar', 'baz'] }" id="bar" data-turbolinks-permanent>
+            <template x-for="item in foo">
+                <span x-text="item"></span>
+            </template>
         </div>
     </body>
 </html>
